added link to footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <h1>clock</h1>
-    <footer>This Poject was coded by Veronica Sandoval</footer>
+    <footer>
+      This Poject was coded by
+      <a href="https://github.com/danniesan">Veronica Sandoval</a> and is
+      open-sourced on
+      <a href="https://github.com/danniesan/world-clock" target="_blank"
+        >GitHub</a
+      >
+      and hosted on
+      <a href="https://world-clock-4.netlify.app/" target="_blank">Netlify</a>
+    </footer>
   </body>
   <script src="src/script.js"></script>
 </html>
