added basic html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>World Clock Project</title>
   </head>
   <body>
-    <h1>clock</h1>
+    <div class="container">
+      <h1>World Clocks</h1>
+      <select name="" id="">
+        <option value="">Select a city...</option>
+        <option value="">New York</option>
+        <option value="">Tokyo</option>
+        <option value="">London</option>
+      </select>
+
+      <div class="city">
+        <h2>Paris 🇫🇷</h2>
+        <div class="date">July 7th 2024</div>
+        <div class="time">5:13:20 PM</div>
+      </div>
+      <div class="city">
+        <h2>Los Angeles 🇺🇸</h2>
+        <div class="date">July 7th 2024</div>
+        <div class="time">5:13:20 PM</div>
+      </div>
+    </div>
     <footer>
       This Poject was coded by
       <a href="https://github.com/danniesan">Veronica Sandoval</a> and is
@@ -15,8 +34,6 @@
       <a href="https://github.com/danniesan/world-clock" target="_blank"
         >GitHub</a
       >
-      and hosted on
-      <a href="https://world-clock-4.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </body>
   <script src="src/script.js"></script>
