updated css file by adding styling

--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
       </select>
 
       <div class="city">
-        <h2>Paris 🇫🇷</h2>
-        <div class="date">July 7th 2024</div>
-        <div class="time">5:13:20 PM</div>
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">July 7th 2024</div>
+        </div>
+        <div class="time">5:13:20 <small>PM</small></div>
       </div>
       <div class="city">
-        <h2>Los Angeles 🇺🇸</h2>
-        <div class="date">July 7th 2024</div>
-        <div class="time">5:13:20 PM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">July 7th 2024</div>
+        </div>
+        <div class="time">5:13:20 <small>PM</small></div>
       </div>
     </div>
     <footer>
