--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
   <body>
     <div class="container">
       <h1>World Clocks</h1>
-      <select name="" id="">
+      <select name="" id="city">
         <option value="">Select a city...</option>
-        <option value="">New York</option>
-        <option value="">Tokyo</option>
-        <option value="">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Europe/London">London</option>
       </select>
 
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris 🇫🇷</h2>
-          <div class="date">July 7th 2024</div>
+      <div id="cities">
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris 🇫🇷</h2>
+            <div class="date">July 7th 2024</div>
+          </div>
+          <div class="time">5:13:20 <small>PM</small></div>
         </div>
-        <div class="time">5:13:20 <small>PM</small></div>
-      </div>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">July 7th 2024</div>
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles 🇺🇸</h2>
+            <div class="date">July 7th 2024</div>
+          </div>
+          <div class="time">5:13:20 <small>PM</small></div>
         </div>
-        <div class="time">5:13:20 <small>PM</small></div>
       </div>
     </div>
     <footer>
