--- a/index.html
+++ b/index.html
@@ -4,35 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aldrich&family=Fira+Code:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>World Clock Project</title>
   </head>
   <body>
     <div class="container">
-      <h1>World Clocks</h1>
+      <h1>World Clock 🗺️</h1>
       <select name="" id="city">
-        <option value="">Select a city...</option>
+        <option value="">📍 Select a city...</option>
         <option value="current">My Current Location</option>
-        <option value="America/New_York">New York</option>
-        <option value="Asia/Tokyo">Tokyo</option>
-        <option value="Europe/London">London</option>
+        <option value="America/Mexico_City">Mexico City 🇲🇽</option>
+        <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
+        <option value="Europe/London">London 🇬🇧</option>
       </select>
 
-      <div id="cities">
+      <div class="city-list" id="cities">
         <div class="city" id="paris">
           <div>
             <h2>Paris 🇫🇷</h2>
-            <div class="date">July 7th 2024</div>
+            <div class="date"></div>
           </div>
-          <div class="time">5:13:20 <small>PM</small></div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="sydney">
+          <div>
+            <h2>Sydney 🇦🇺</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
         <div class="city" id="los-angeles">
           <div>
             <h2>Los Angeles 🇺🇸</h2>
-            <div class="date">July 7th 2024</div>
+            <div class="date"></div>
           </div>
-          <div class="time">5:13:20 <small>PM</small></div>
+          <div class="time"></div>
         </div>
       </div>
     </div>
