added target to footer link

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
     </div>
     <footer>
       This Poject was coded by
-      <a href="https://github.com/danniesan">Veronica Sandoval</a> and is
-      open-sourced on
+      <a href="https://github.com/danniesan" target="_blank"
+        >Veronica Sandoval</a
+      >
+      and is open-sourced on
       <a href="https://github.com/danniesan/world-clock" target="_blank"
         >GitHub</a
       >
